[package]
name = "vscode-cjk-toggle-terminal-fixer"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
auto-launch = "0.4.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
trayicon = "0.1.3"
windows = { version = "0.51.1", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

[build-dependencies]
winres = "0.1"
